# IHM-embarquee-TP

TP1/: TP1.pro  loginpage.cpp  loginpage.h  loginpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskpage.cpp  taskpage.h  taskpage.ui
TP2/Capteur/: Capteur.pro  capteur.cpp  capteur.h  main.cpp
TP2/Client/: Client.pro  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
TP2/Server/: main.cpp  server.cpp  server.h
TP2Bis/: README.md
TP2Bis/BrokerMQTT_Broker/: broker.cpp  broker.h  (+2 more)
lab-ihm-client/: CMakeCache.txt  CMakeLists.txt  Main_interface.qml  Makefile  README.md  applab_ihm_client  applab_ihm_client_qmltyperegistrations.cpp  build.sh  cmake_install.cmake  compile_commands.json  loginbackend.cpp  loginbackend.h  main.cpp  mainbackend.cpp  mainbackend.h  tcpmanager.cpp  tcpmanager.h
lab-ihm-client/applab_ihm_client_autogen/: deps  mocs_compilation.cpp
lab-ihm-client/applab_ihm_client_autogen/EWIEGA46WW/: moc_loginbackend.cpp  moc_loginbackend.cpp.d  moc_loginbackend.cpp.json  moc_mainbackend.cpp  moc_mainbackend.cpp.d  moc_mainbackend.cpp.json  moc_sender.cpp  moc_sender.cpp.d  moc_sender.cpp.json  moc_tcpmanager.cpp  moc_tcpmanager.cpp.d  moc_tcpmanager.cpp.json
lab-ihm-client/lab_ihm_client/: Admin_interface.qml  Login_page.qml  Main.qml  Main_interface.qml  applab_ihm_client_qml_module_dir_map.qrc  qmldir
lab-ihm-client/meta_types/: applab_ihm_client_json_file_list.txt  applab_ihm_client_json_file_list.txt.timestamp  qt6applab_ihm_client_metatypes.json.gen
lab-ihm-client/qmltypes/: applab_ihm_client_foreign_types.txt
(+13 files in other folders)
