cmake_minimum_required(VERSION 3.16)

project(lab_ihm_client VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(QT_QML_GENERATE_QMLLS_INI ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)

qt_standard_project_setup(REQUIRES 6.5)

qt_add_executable(applab_ihm_client
    main.cpp
    loginbackend.cpp
    tcpmanager.cpp
    mainbackend.cpp
)

qt_add_qml_module(applab_ihm_client
    URI lab_ihm_client
    QML_FILES
        Main.qml
        RESOURCES
        QML_FILES Login_page.qml
        QML_FILES Main_interface.qml
        QML_FILES Admin_interface.qml
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(applab_ihm_client PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.applab_ihm_client
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(applab_ihm_client
    PRIVATE Qt6::Quick
)

install(TARGETS applab_ihm_client
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
